Bug 330995 - Memory leaks
Summary: Memory leaks
Status: RESOLVED FIXED
Alias: None
Product: kiten
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Joseph Kerian
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-10 21:24 UTC by Maximiliano Curia
Modified: 2014-02-25 18:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Deinflection::search leaks (990 bytes, patch)
2014-02-10 21:26 UTC, Maximiliano Curia
Details
DictFileEdict::doSearch leaks (978 bytes, patch)
2014-02-10 21:26 UTC, Maximiliano Curia
Details
DictFileKanjidic::doSearch leaks (556 bytes, patch)
2014-02-10 21:27 UTC, Maximiliano Curia
Details
KanjiBrowser::loadKanji leaks (562 bytes, patch)
2014-02-10 21:28 UTC, Maximiliano Curia
Details
RadicalFile::loadRadicalFile leaks (592 bytes, patch)
2014-02-10 21:28 UTC, Maximiliano Curia
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maximiliano Curia 2014-02-10 21:24:49 UTC
Hi,

I've tested running kiten with valgrind and found a number of memory leaks, this bug was originally reported in the Debian bug tracker here:
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=737594

I'm attaching some patches for the most obvious leaks reported by valgrind.

Thanks,

Reproducible: Always

Steps to Reproduce:
1. valgrind --trace-children=yes --log-file=/tmp/kiten.%p --leak-check=full --track-origins=yes kiten


Expected Results:  
No memory leaks were detected.
Comment 1 Maximiliano Curia 2014-02-10 21:26:05 UTC
Created attachment 85086 [details]
Deinflection::search leaks
Comment 2 Maximiliano Curia 2014-02-10 21:26:54 UTC
Created attachment 85087 [details]
DictFileEdict::doSearch leaks
Comment 3 Maximiliano Curia 2014-02-10 21:27:34 UTC
Created attachment 85088 [details]
DictFileKanjidic::doSearch leaks
Comment 4 Maximiliano Curia 2014-02-10 21:28:12 UTC
Created attachment 85089 [details]
KanjiBrowser::loadKanji leaks
Comment 5 Maximiliano Curia 2014-02-10 21:28:40 UTC
Created attachment 85090 [details]
RadicalFile::loadRadicalFile leaks
Comment 6 Andreas Cord-Landwehr 2014-02-25 18:30:57 UTC
Git commit 390d5febfb7e8e35727346d57a423901ff35a595 by Andreas Cord-Landwehr, on behalf of Maximiliano Curia.
Committed on 25/02/2014 at 18:28.
Pushed by cordlandwehr into branch 'master'.

Fix memory leaks.

This fixes a set of memory leaks as reported in Debian bugs
610534 and 737594.
CCMAIL: maxy@debian.org
REVIEW: 115988

M  +4    -1    kanjibrowser/kanjibrowser.cpp
M  +5    -1    lib/DictEdict/deinflection.cpp
M  +6    -0    lib/DictEdict/dictfileedict.cpp
M  +1    -0    lib/DictKanjidic/dictfilekanjidic.cpp
M  +1    -0    radselect/radicalfile.cpp

http://commits.kde.org/kiten/390d5febfb7e8e35727346d57a423901ff35a595