Fix memory leaks.

This fixes a set of memory leaks as reported in Debian bugs
610534 and 737594.

BUG: 330995
CCMAIL: maxy@debian.org
REVIEW: 115988